template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: CloudFormation template to deploy an Apache web server that dynamically adjusts capacity based on CPU load.


Parameters:
  VpcCidr:
    Type: String
    Default: 10.0.0.0/16
    Description: CIDR block for the VPC
  LatestAmazonLinuxAMI:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2
  SubnetCidrPublic1:
    Type: String
    Default: 10.0.1.0/24
    Description: CIDR block for public subnet 1
  SubnetCidrPublic2:
    Type: String
    Default: 10.0.2.0/24
    Description: CIDR block for public subnet 2
  SubnetCidrPrivate1:
    Type: String
    Default: 10.0.3.0/24
    Description: CIDR block for private subnet 1
  SubnetCidrPrivate2:
    Type: String
    Default: 10.0.4.0/24
    Description: CIDR block for private subnet 2
  InstanceType: 
    Type: String
    Description: The EC2 instance type
    Default: t2.micro
  CPUPolicyTargetValue:
    Type: String
    Description: The target utilization for the CPU metric
    Default: '50'
  ProjectTag:
    Type: String
    Default: auto-scaling-lab

Resources:
  # IAM Role for EC2 Instances (for SSM)
  EC2InstanceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: [ ec2.amazonaws.com ]
            Action: [ sts:AssumeRole ]
      Path: /
      Policies:
        - PolicyName: S3AccessPolicy
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
            - Effect: Allow
              Action: [ 's3:GetObject' ]
              Resource:
                - !Sub 'arn:aws:s3:::user-data-scripts/*' 
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
      Tags:
        - Key: Name
          Value: AutoScalingLabEC2Role
        - Key: Project
          Value: !Sub "${ProjectTag}"

  EC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref EC2InstanceRole

  ASGLabVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidr
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: ASGLabVPC
        - Key: Project
          Value: !Sub "${ProjectTag}"

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref ASGLabVPC
      CidrBlock: !Ref SubnetCidrPrivate1
      AvailabilityZone: !Select [0, !GetAZs  ""]
      Tags:
        - Key: Name
          Value: ASGPrivateSubnet1
  
  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref ASGLabVPC
      CidrBlock: !Ref SubnetCidrPrivate2
      AvailabilityZone: !Select [1, !GetAZs  ""]
      Tags:
        - Key: Name
          Value: ASGPrivateSubnet2
   
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref ASGLabVPC
      CidrBlock: !Ref SubnetCidrPublic1
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select [0, !GetAZs  ""]
      Tags:
        - Key: Name
          Value: ASGPublicSubnet1
  
  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref ASGLabVPC
      CidrBlock: !Ref SubnetCidrPublic2
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select [1, !GetAZs  ""]
      Tags:
        - Key: Name
          Value: ASGPublicSubnet2

  # Internet Gateway
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: AutoScalingLabIGW
  
  NatGateway:
    Type: AWS::EC2::NatGateway
    DependsOn: VPCGatewayAttachment
    Properties:
      SubnetId: !Ref PublicSubnet1
      AllocationId: !GetAtt EIP.AllocationId
      Tags:
        - Key: Name
          Value: AutoScalingLabNatGateway

  EIP:
    Type: AWS::EC2::EIP
    DependsOn: VPCGatewayAttachment
    Properties:
      Domain: vpc

  
  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref ASGLabVPC
      InternetGatewayId: !Ref InternetGateway

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref ASGLabVPC
      Tags:
        - Key: Name
          Value: PublicRouteTable
  
  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref ASGLabVPC
      Tags:
        - Key: Name
          Value: PrivateRouteTable

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable


  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for web server
      VpcId: !Ref ASGLabVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref ALBSecurityGroup
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 10.0.3.31/32
      SecurityGroupEgress:
        - IpProtocol: "-1"
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: WebServerSecurityGroup

  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for Application Load Balancer
      VpcId: !Ref ASGLabVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: !Ref VpcCidr
      Tags:
        - Key: Name
          Value: ALBSecurityGroup

  AutoScalingLabTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: AutoScalingLabTargetGroup
      VpcId: !Ref ASGLabVPC
      Port: 80
      Protocol: HTTP
      HealthCheckPath: /
      Matcher:
        HttpCode: "200"
      HealthCheckIntervalSeconds: 30
      HealthCheckTimeoutSeconds: 10
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 2       
      Tags:
        - Key: Name
          Value: AutoScalingLabTargetGroup

  ALBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Description: Listener for the Application Load Balancer
    Properties:
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref AutoScalingLabTargetGroup

  # Application Load Balancer
  ApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Scheme: internet-facing
      Type: application
      Subnets: 
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
      SecurityGroups:
        - !Ref ALBSecurityGroup

  # --- EC2 Launch Template
  LaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties: 
      LaunchTemplateName: !Sub ${AWS::StackName}-launch-template
      LaunchTemplateData:
        ImageId: !Ref LatestAmazonLinuxAMI
        InstanceType: !Ref InstanceType
        IamInstanceProfile:
          Name: !Ref EC2InstanceProfile
        KeyName: EC2KeyPair
        SecurityGroupIds: 
          - !Ref WebServerSecurityGroup
        TagSpecifications:
          - ResourceType: "instance"
            Tags:
            - Key: "Project"
              Value: !Sub "${ProjectTag}"
        UserData:
          Fn::Base64: !Sub |
            #!/bin/bash -xe

            exec > >(tee /var/log/user-data.log) 2>&1
            echo "Starting UserData execution at $(date)"

            yum update -y
            amazon-linux-extras install epel -y
            yum install -y httpd stress
            systemctl start httpd
            systemctl enable httpd

            # Enable CGI module and configure Apache
            cat <<EOF > /etc/httpd/conf.d/cgi-bin.conf
            <Directory "/var/www/cgi-bin">
                AllowOverride None
                Options +ExecCGI
                AddHandler cgi-script .cgi
                Require all granted
            </Directory>
            EOF

            # Restart Apache to apply CGI config
            systemctl restart httpd
            
          
            INSTANCE_ID=$(curl -s http://169.254.169.254/latest/meta-data/instance-id)
            IP_ADDRESS="$(hostname -I | cut -d" " -f1)"

            cat > /var/www/html/index.html <<EOF
            <!DOCTYPE html>
            <html>
              <head>
                <title>Auto Scaling Lab</title>
              </head>
              <body>
                <h1>Hello from $IP_ADDRESS / $INSTANCE_ID</h1>
                <button onclick="stressCPU()">Stress CPU</button>
                <script>
                  function stressCPU() {
                    fetch('/cgi-bin/simulate-cpu-stress.cgi', { method: 'POST' })
                      .then(response => response.text())
                      .then(data => { 
                        console.log("data -> ", "data -> ", data);
                        console.log(`IP_ADDRESS -> ${IP_ADDRESS} \n INSTANCE_ID -> ${INSTANCE_ID}`);
                        alert('CPU stress initiated! Scaling may occur if utilization exceeds 50%');
                      })
                      .catch(error => console.error('Error:', error));
                  }
                </script>
              </body>
            </html>
            EOF

            # Create CPU stress CGI script
            cat <<EOF > /var/www/cgi-bin/simulate-cpu-stress.cgi
            #!/bin/bash
            echo "Content-type: text/html"
            echo ""
            echo "Starting CPU stress test for 30 seconds..."
            nohup stress --cpu 4 --timeout 30 >> /var/log/stress.log 2>&1 &
            echo \$? >> /var/log/stress.log
            EOF
            chmod +x /var/www/cgi-bin/simulate-cpu-stress.cgi
            
  AutoScalingPolicy:
    Type: AWS::AutoScaling::ScalingPolicy
    Properties:
      PolicyType: TargetTrackingScaling
      AutoScalingGroupName: !Ref AutoScalingGroup
      Cooldown: '300'
      TargetTrackingConfiguration:
        TargetValue: !Ref CPUPolicyTargetValue
        PredefinedMetricSpecification:
          PredefinedMetricType: ASGAverageCPUUtilization
      
  AutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      LaunchTemplate:
        LaunchTemplateId: !Ref LaunchTemplate
        Version: !GetAtt LaunchTemplate.LatestVersionNumber
      MaxSize: '3'
      MinSize: '1'
      DesiredCapacity: '1'
      TargetGroupARNs:
        - !Ref AutoScalingLabTargetGroup
      HealthCheckType: ELB
      HealthCheckGracePeriod: 600
      VPCZoneIdentifier: 
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
      Tags:
        - Key: Name
          Value: AutoScalingLabInstance
          PropagateAtLaunch: true

Outputs:
  ALBEndpoint:
    Description: URL of the Application Load Balancer
    Value: !Sub http://${ApplicationLoadBalancer.DNSName}
